# tpe_funcional_2025_pokemonad

./: .gitignore  README.md  cabal.project  download_back_sprites.py  hie.yaml
game-client/: game-client.cabal
game-client/app/: Main.hs  icon.rc
game-client/app/Engine/: GameState.hs  Keys.hs  World.hs
game-client/app/Screens/: AISimulatorScreen.hs  BattleEndScreen.hs  BattleScreen.hs  MenuScreen.hs  MultiplayerScreen.hs  OpponentSelectScreen.hs  PokedexScreen.hs  PokemonScreen.hs  StartScreen.hs  TeamSelectScreen.hs
game-client/app/engine/: Common.hs  GameState.hs  Keys.hs
game-client/app/screens/: AIScreen.hs  BattleScreen.hs  MenuScreen.hs  MultiplayerScreen.hs  OpponentSelectScreen.hs  PokedexScreen.hs  PokemonScreen.hs  StartScreen.hs  TeamSelectScreen.hs
game-client/assets/images/: main_screen.bmp.bak
game-client/src/Client/: Drawing.hs  Events.hs  NetSerializers.hs  Render.hs  State.hs  Types.hs
game-client/src/Client/Handlers/: AISimulatorHandler.hs  BattleHandler.hs  BattleResultHandler.hs  MenuHandler.hs  MultiplayerHandler.hs  OpponentSelectHandler.hs  PokedexHandler.hs  PokemonDetailHandler.hs  StartScreenHandler.hs  TeamSelectHandler.hs
game-client/src/Client/Screens/: AISimulatorScreen.hs  BattleEndScreen.hs  BattleScreen.hs  MenuScreen.hs  MultiplayerScreen.hs  OpponentSelectScreen.hs  PokedexScreen.hs  PokemonScreen.hs  StartScreen.hs  TeamSelectScreen.hs
game-engine/: LICENSE  game-engine.cabal
game-engine/data/: ai_checkpoint.txt
game-engine/src/Game/: AI.hs  AICheckpoint.hs  AIHyperParams.hs  AIModel.hs  AITraining.hs  Battle.hs  Engine.hs  FreeMonad.hs  Logic.hs  Move.hs  Pokemon.hs  Trainer.hs  Types.hs
game-engine/src/Pokemonad/AI/: Decision.hs  HyperParams.hs  Model.hs  Persistence.hs  Training.hs
game-engine/src/Pokemonad/Battle/: Damage.hs  Logic.hs  State.hs  Turn.hs
game-engine/src/Pokemonad/Core/: Move.hs  Pokemon.hs  Trainer.hs  Types.hs
game-engine/test/: Main.hs
informe/: bibliografia.bib  main.tex
informe/secciones/: 00_caratula.tex  01_introduccion.tex  02_marco_teorico.tex  03_arquitectura.tex  04_detalles_diseno.tex  05_conclusiones.tex
p2p-net/: p2p-net.cabal
p2p-net/src/P2P/: Communication.hs  Serialization.hs  Types.hs
p2p-net/test/: Main.hs
