cabal-version:      3.0
name:               game-client
version:            0.1.0.0
synopsis:           Ejecutable del juego Pokemonad
license:            BSD-3-Clause
author:             Francisco Quian Blanco, Theo Stanfield
build-type:         Simple

executable pokemonad
    main-is:          Main.hs
    hs-source-dirs:   app
    
    build-depends:    base >= 4.14 && < 5,
                      p2p-net,
                      game-engine,
                      gloss,
                      text

    default-language: Haskell2010
    
    ghc-options:      -threaded -O2