cabal-version:      3.0
name:               game-client
version:            0.1.0.0
synopsis:           Ejecutable del juego Pokemonad
license:            BSD-3-Clause
author:             Francisco Quian Blanco, Theo Stanfield
build-type:         Simple
-- extra-source-files: icon.o

executable pokemonad
    main-is:          Main.hs
    other-modules:    Engine.Keys,
                      Engine.Common,
                      Engine.GameState,
                      Screens.StartScreen,
                      Screens.MenuScreen,
                      Screens.PokedexScreen,
                      Screens.PokemonScreen,
                      Screens.MultiplayerScreen,
                      Screens.TeamSelectScreen,
                      Screens.OpponentSelectScreen,
                      Screens.BattleScreen,
    hs-source-dirs:   app
    
    build-depends:    base >= 4.14 && < 5,
                      p2p-net,
                      game-engine,
                      containers,
                      random >= 1.2,
                      gloss,
                      gloss-juicy,
                      text

    default-language: Haskell2010
    
    ghc-options:      -threaded -O2
    -- ld-options:       icon.o