cabal-version:      3.0
name:               game-client
version:            0.1.0.0
synopsis:           Ejecutable del juego Pokemonad
license:            BSD-3-Clause
author:             Francisco Quian Blanco, Theo Stanfield
build-type:         Simple

executable pokemonad
    main-is:          Main.hs
    other-modules:    Client.Types,
                      Client.State,
                      Client.Drawing,
                      Client.Events,
                      Client.Render,
                      Client.Handlers.StartScreenHandler,
                      Client.Handlers.MenuHandler,
                      Client.Handlers.PokedexHandler,
                      Client.Handlers.PokemonDetailHandler,
                      Client.Handlers.BattleResultHandler,
                      Client.Handlers.BattleHandler,
                      Client.Handlers.TeamSelectHandler,
                      Client.Handlers.OpponentSelectHandler,
                      Client.Handlers.MultiplayerHandler,
                      Client.Handlers.AISimulatorHandler,
                      Client.Screens.StartScreen,
                      Client.Screens.MenuScreen,
                      Client.Screens.AISimulatorScreen,
                      Client.Screens.PokedexScreen,
                      Client.Screens.PokemonScreen,
                      Client.Screens.MultiplayerScreen,
                      Client.Screens.TeamSelectScreen,
                      Client.Screens.OpponentSelectScreen,
                      Client.Screens.BattleScreen,
                      Client.Screens.BattleEndScreen
    hs-source-dirs:   app, src

    build-depends:    base >= 4.14 && < 5,
                      p2p-net,
                      game-engine,
                      containers,
                      network,
                      random >= 1.2,
                      stm,
                      gloss,
                      gloss-juicy,
                      text

    default-language: Haskell2010

    ghc-options:      -threaded -O2
