cabal-version:      3.0
name:               game-engine
version:            0.1.0.0
synopsis:           Lógica de negocio y Free Monads de Pokemonad
license:            BSD-3-Clause
author:             Francisco Quian Blanco, Theo Stanfield
build-type:         Simple

library
    hs-source-dirs:   src
    
    exposed-modules:  Game.AI
                      Game.AIHyperParams
                      Game.AIModel
                      Game.AITraining
                      Game.Battle
                      Game.Engine
                      Game.Logic
                      Game.Move
                      Game.Pokemon
                      Game.Trainer
                      Game.Types

    -- Las librerías de lógica
    build-depends:    base >= 4.14 && < 5,
                      free,
                      lens,
                      random,
                      mtl
    
    default-language: Haskell2010