cabal-version:      3.0
name:               game-engine
version:            0.1.0.0
synopsis:           Pure game logic and AI systems for Pokemonad
license:            BSD-3-Clause
author:             Francisco Quian Blanco, Theo Stanfield
build-type:         Simple

library
    hs-source-dirs:   src

    exposed-modules:
        Pokemonad.Core.Types
        Pokemonad.Core.Move
        Pokemonad.Core.Pokemon
        Pokemonad.Core.Trainer
        Pokemonad.Battle.State
        Pokemonad.Battle.Damage
        Pokemonad.Battle.Logic
        Pokemonad.Battle.Turn
        Pokemonad.AI.Model
        Pokemonad.AI.HyperParams
        Pokemonad.AI.Training
        Pokemonad.AI.Decision
        Pokemonad.AI.Persistence

    build-depends:
        base >= 4.14 && < 5,
        random,
        mtl

    default-language: Haskell2010
