cabal-version:      3.0
name:               p2p-net
version:            0.1.0.0
synopsis:           Generic peer-to-peer networking library for turn-based games
license:            BSD-3-Clause
author:             Francisco Quian Blanco, Theo Stanfield
build-type:         Simple

library
    hs-source-dirs:   src

    exposed-modules:
        P2P.Types
        P2P.Serialization
        P2P.Communication

    build-depends:
        base >= 4.14 && < 5,
        network,
        stm,
        binary,
        bytestring

    default-language: Haskell2010
